--- a/app/package.json
+++ b/app/package.json
@@ -9,24 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.0",
-    "@react-navigation/native": "^6.0.11",
-    "@react-navigation/native-stack": "^6.7.0",
-    "@react-navigation/stack": "6.2.1",
-    "expo": "~46.0.7",
-    "expo-status-bar": "~1.4.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-native": "0.69.6",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "@expo/webpack-config": "^0.17.4",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@react-navigation/stack": "6.3.10",
+    "expo": "~47.0.12",
+    "expo-status-bar": "~1.4.2",
+    "npm-check-updates": "^16.6.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.2",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.69.1",
-    "typescript": "~4.3.5"
+    "@babel/core": "^7.20.12",
+    "@types/react": "~18.0.26",
+    "@types/react-native": "~0.70.8",
+    "typescript": "~4.9.4"
   },
   "private": true
 }
