--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.4",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.3",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
@@ -19,7 +21,10 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.2",
-    "react-native-web": "~0.18.10"
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "^0.18.10",
+    "expo-linear-gradient": "~12.0.1",
+    "react-native-gesture-handler": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
