--- a/app/package.json
+++ b/app/package.json
@@ -14,17 +14,17 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.3",
     "expo": "~47.0.12",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "npm-check-updates": "^16.6.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.10",
-    "expo-linear-gradient": "~12.0.1",
-    "react-native-gesture-handler": "~2.8.0"
+    "react-native-web": "^0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
