--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.2.3",
     "expo": "~47.0.12",
+    "expo-cli": "^6.3.1",
     "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "npm-check-updates": "^16.6.2",
