--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_NATIVE_PACKAGER_HOSTNAME=192.168.0.5
 EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
-BASE_URL=http://localhost:8080
+API_URL=http://localhost:8080
+BASE_URL=http://localhost:19006
