--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "npm-check-updates": "^16.6.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
     "react-native-gesture-handler": "~2.8.0",
