--- a/app/package.json
+++ b/app/package.json
@@ -28,7 +28,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "^0.18.10"
+    "react-native-web": "^0.18.10",
+    "react-spotify-embed": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
