--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "react-helmet-async": "^1.3.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
+    "react-native-form-validator": "^0.5.1",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.2",
