--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "expo": "~47.0.12",
     "expo-cli": "^6.3.1",
     "expo-linear-gradient": "~12.0.1",
+    "expo-localization": "~14.0.0",
     "expo-status-bar": "~1.4.2",
     "npm-check-updates": "^16.6.2",
     "react": "18.1.0",
