--- a/app/package.json
+++ b/app/package.json
@@ -6,17 +6,16 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "npx expo start --web"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.5.0",
     "expo": "~49.0.9",
     "expo-localization": "~14.3.0",
-    "npm-check-updates": "^16.13.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -32,6 +31,7 @@
     "@babel/core": "^7.22.11",
     "@types/react": "~18.2.21",
     "@types/react-native": "~0.72.2",
+    "npm-check-updates": "^16.13.2",
     "typescript": "~5.2.2"
   },
   "private": true
