--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.0",
     "expo": "~49.0.9",
     "expo-localization": "~14.3.0",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
