fix: update app name

--- a/app/app.json
+++ b/app/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "specify",
+    "name": "音楽タイマー",
     "slug": "specify",
     "version": "1.0.0",
     "orientation": "portrait",
