"Refactor playlist deletion otifications to toast messages

--- a/app/app.json
+++ b/app/app.json
@@ -27,8 +27,7 @@
       }
     },
     "web": {
-      "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "favicon": "./assets/favicon.png"
     }
   }
 }
