--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-native": "0.72.4",
     "react-native-dotenv": "^3.4.9",
     "react-native-form-validator": "^0.5.1",
