--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,10 @@
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.6.0",
     "expo": "~49.0.9",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
     "expo-localization": "~14.3.0",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,15 +27,13 @@
     "react-native": "0.72.6",
     "react-native-dotenv": "^3.4.9",
     "react-native-form-validator": "^0.5.1",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-text-link": "^1.0.1",
     "react-native-vector-icons": "^10.0.0",
     "react-native-web": "~0.19.6",
-    "react-spotify-embed": "^2.0.3",
-    "expo-router": "^2.0.0",
-    "react-native-screens": "~3.22.0",
-    "expo-linking": "~5.0.2",
-    "expo-constants": "~14.4.2",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-spotify-embed": "^2.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
