--- a/app/package.json
+++ b/app/package.json
@@ -9,37 +9,37 @@
     "web": "npx expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@expo/webpack-config": "^19.0.1",
+    "@react-native-async-storage/async-storage": "1.24.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
-    "axios": "^1.6.0",
-    "expo": "~49.0.9",
-    "expo-constants": "~14.4.2",
-    "expo-linking": "~5.0.2",
-    "expo-localization": "~14.3.0",
-    "expo-router": "^2.0.0",
-    "expo-status-bar": "~1.6.0",
+    "axios": "^1.7.2",
+    "expo": "^50.0.0",
+    "expo-constants": "~16.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
+    "expo-router": "^3.5.18",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-helmet-async": "^1.3.0",
+    "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.4.1",
-    "react-native": "0.72.6",
-    "react-native-dotenv": "^3.4.9",
+    "react-native": "^0.74.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-form-validator": "^0.5.1",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-gesture-handler": "~2.17.1",
+    "react-native-safe-area-context": "4.10.8",
+    "react-native-screens": "~3.32.0",
     "react-native-text-link": "^1.0.1",
-    "react-native-vector-icons": "^10.0.0",
-    "react-native-web": "~0.19.6",
-    "react-spotify-embed": "^2.0.3"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-web": "~0.19.12",
+    "react-spotify-embed": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@types/react": "~18.2.21",
-    "npm-check-updates": "^16.13.2",
-    "typescript": "~5.2.2"
+    "@babel/core": "^7.24.9",
+    "@types/react": "~18.3.3",
+    "npm-check-updates": "^16.14.20",
+    "typescript": "~5.5.3"
   },
   "private": true,
   "overrides": {
