--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.1",
+    "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.24.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
@@ -23,17 +24,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
     "react-native": "^0.74.3",
     "react-native-dotenv": "^3.4.11",
-    "react-native-form-validator": "^0.5.1",
     "react-native-gesture-handler": "~2.17.1",
     "react-native-safe-area-context": "4.10.8",
     "react-native-screens": "~3.32.0",
     "react-native-text-link": "^1.0.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.12",
-    "react-spotify-embed": "^2.0.4"
+    "react-spotify-embed": "^2.0.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
