--- a/app/package.json
+++ b/app/package.json
@@ -15,18 +15,18 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.7.4",
-    "expo": "^50.0.0",
+    "expo": "^50.0.20",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
-    "expo-router": "^3.5.18",
+    "expo-router": "^3.5.21",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
-    "react-native": "^0.74.3",
+    "react-native": "0.74.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.17.1",
     "react-native-safe-area-context": "4.10.8",
