--- a/app/app.json
+++ b/app/app.json
@@ -27,6 +27,7 @@
       }
     },
     "web": {
+      "output": "single",
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
