--- a/app/package.json
+++ b/app/package.json
@@ -9,20 +9,19 @@
     "web": "npx expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.1",
     "@hookform/resolvers": "^3.9.0",
     "@react-native-async-storage/async-storage": "1.24.0",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "axios": "^1.7.4",
-    "expo": "^50.0.20",
+    "expo": "^51.0.28",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-router": "^3.5.23",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
@@ -35,7 +34,8 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.12",
     "react-spotify-embed": "^2.0.4",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
