--- a/app/package.json
+++ b/app/package.json
@@ -20,16 +20,16 @@
     "expo-localization": "~15.0.3",
     "expo-router": "^3.5.23",
     "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
-    "react-native": "0.74.5",
+    "react-native": "0.75.0",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.17.1",
+    "react-native-gesture-handler": "~2.18.1",
     "react-native-safe-area-context": "4.10.8",
-    "react-native-screens": "~3.32.0",
+    "react-native-screens": "~3.34.0",
     "react-native-text-link": "^1.0.1",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.12",
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.3",
-    "npm-check-updates": "^16.14.20",
+    "npm-check-updates": "^17.0.6",
     "typescript": "~5.5.4"
   },
   "private": true,
