--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     working_dir: /usr/src/app
     volumes:
       - ./app/:/usr/src/app
+      - /usr/src/app/node_modules/
     env_file: .env
     ports:
       - "19000:19000"
