--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
 API_URL=http://localhost:8080
 BASE_URL=http://localhost:19006
 RCT_METRO_PORT=19006
+GOOGLE_ANALYTICS_TRACKING_ID=
