--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.2",
     "react-hot-toast": "^2.4.1",
