--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.7.4",
+    "axios-retry": "^4.5.0",
     "expo": "^51.0.28",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
