--- a/app/package.json
+++ b/app/package.json
@@ -8,35 +8,35 @@
     "ios": "npx expo run:ios"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "@hookform/resolvers": "^3.9.0",
-    "@react-native-async-storage/async-storage": "1.24.0",
-    "@rneui/base": "^4.0.0-rc.7",
-    "@rneui/themed": "^4.0.0-rc.8",
-    "axios": "^1.7.4",
-    "axios-retry": "^4.5.0",
-    "expo": "^51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-router": "^3.5.23",
-    "expo-status-bar": "~1.12.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-ga4": "^2.1.0",
-    "react-helmet-async": "^2.0.5",
-    "react-hook-form": "^7.52.2",
-    "react-hot-toast": "^2.4.1",
+    "@expo/metro-runtime": "3.2.3",
+    "@hookform/resolvers": "3.9.0",
+    "@react-native-async-storage/async-storage": "2.0.0",
+    "@rneui/base": "4.0.0-rc.7",
+    "@rneui/themed": "4.0.0-rc.8",
+    "axios": "1.7.5",
+    "axios-retry": "4.5.0",
+    "expo": "51.0.31",
+    "expo-constants": "16.0.2",
+    "expo-linking": "6.3.1",
+    "expo-localization": "15.0.3",
+    "expo-router": "3.5.23",
+    "expo-status-bar": "1.12.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-ga4": "2.1.0",
+    "react-helmet-async": "2.0.5",
+    "react-hook-form": "7.53.0",
+    "react-hot-toast": "2.4.1",
     "react-native": "0.75.0",
-    "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "~2.18.1",
-    "react-native-safe-area-context": "4.10.8",
-    "react-native-screens": "~3.34.0",
-    "react-native-text-link": "^1.0.1",
-    "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.12",
-    "react-spotify-embed": "^2.0.4",
-    "yup": "^1.4.0"
+    "react-native-dotenv": "3.4.11",
+    "react-native-gesture-handler": "2.18.1",
+    "react-native-safe-area-context": "4.10.9",
+    "react-native-screens": "3.34.0",
+    "react-native-text-link": "1.0.1",
+    "react-native-vector-icons": "10.1.0",
+    "react-native-web": "0.19.12",
+    "react-spotify-embed": "2.0.4",
+    "yup": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
