--- a/app/package.json
+++ b/app/package.json
@@ -39,10 +39,10 @@
     "yup": "1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.3",
-    "npm-check-updates": "^17.0.6",
-    "typescript": "~5.5.4"
+    "@babel/core": "7.25.2",
+    "@types/react": "18.3.4",
+    "npm-check-updates": "17.1.0",
+    "typescript": "5.5.4"
   },
   "private": true,
   "overrides": {
