--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "axios-retry": "4.5.0",
     "expo": "51.0.31",
     "expo-constants": "16.0.2",
+    "expo-linear-gradient": "14.0.2",
     "expo-linking": "6.3.1",
     "expo-localization": "15.0.3",
     "expo-router": "3.5.23",
@@ -30,8 +31,10 @@
     "react-native": "0.75.2",
     "react-native-dotenv": "3.4.11",
     "react-native-gesture-handler": "2.18.1",
+    "react-native-linear-gradient": "2.8.3",
     "react-native-safe-area-context": "4.10.9",
     "react-native-screens": "3.34.0",
+    "react-native-svg": "15.11.1",
     "react-native-text-link": "1.0.1",
     "react-native-vector-icons": "10.1.0",
     "react-native-web": "0.19.12",
