--- a/app/package.json
+++ b/app/package.json
@@ -26,16 +26,16 @@
     "react-dom": "18.3.1",
     "react-ga4": "2.1.0",
     "react-hook-form": "7.53.0",
-    "react-hot-toast": "2.4.1",
     "react-native": "0.75.2",
     "react-native-dotenv": "3.4.11",
     "react-native-safe-area-context": "4.10.9",
     "react-native-screens": "3.34.0",
     "react-native-svg": "15.11.1",
     "react-native-text-link": "1.0.1",
+    "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "10.1.0",
     "react-native-web": "0.19.12",
-    "react-spotify-embed": "2.0.4",
+    "react-native-webview": "^13.8.6",
     "yup": "1.4.0"
   },
   "devDependencies": {
