--- a/app/package.json
+++ b/app/package.json
@@ -35,7 +35,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-vector-icons": "10.1.0",
     "react-native-web": "0.19.12",
-    "react-native-webview": "^13.8.6",
+    "react-native-webview": "13.8.6",
     "yup": "1.4.0"
   },
   "devDependencies": {
