feat: update app.json with bundle identifier and extra configuration
- Added bundleIdentifier for iOS and package for Android to app.json for better app identification.
- Introduced extra configuration for router and EAS project ID to enhance build and routing capabilities.

--- a/app/app.json
+++ b/app/app.json
@@ -18,9 +18,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ppdevelop.musictimer"
     },
     "android": {
+      "package": "com.ppdevelop.musictimer",
       "adaptiveIcon": {
         "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
@@ -33,6 +35,14 @@
     },
     "plugins": [
       "expo-router"
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "78916394-65b6-4218-9c29-c8b6aaa27380"
+      }
+    }
   }
 }
