--- a/app/app.json
+++ b/app/app.json
@@ -3,6 +3,7 @@
     "name": "music timer",
     "slug": "music-timer",
     "version": "1.0.0",
+    "scheme": "musictimer",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -34,7 +35,8 @@
       "bundler": "metro"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-secure-store"
     ],
     "extra": {
       "router": {
