--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "expo-linking": "6.3.1",
     "expo-localization": "15.0.3",
     "expo-router": "3.5.23",
+    "expo-secure-store": "~13.0.2",
     "expo-status-bar": "1.12.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
