feat: enhance app structure with platform-specific error handling and layout components
- Added error handling pages for both Android and web platforms to display user-friendly error messages.
- Implemented platform-specific index and layout components for better user experience and authentication flow.
- Updated app.json to include support for Android and web platforms, improving overall app configuration.

--- a/app/app.json
+++ b/app/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "scheme": "musictimer",
     "orientation": "portrait",
+    "platforms": ["android", "web"],
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -18,10 +19,6 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.ppdevelop.musictimer"
-    },
     "android": {
       "package": "com.ppdevelop.musictimer",
       "adaptiveIcon": {
