feat: update API and base URLs configuration
- Added API_URL and BASE_URL to app.json for environment configuration.
- Updated index.ts to prioritize environment variables, allowing for flexible URL management across development and production environments.

--- a/app/app.json
+++ b/app/app.json
@@ -36,6 +36,8 @@
       "expo-secure-store"
     ],
     "extra": {
+      "API_URL": "https://api.music-timer.dpdns.org",
+      "BASE_URL": "https://music-timer.dpdns.org",
       "router": {
         "origin": false
       },
