feat: update app configuration and assets
- Changed splash screen background color to a darker shade for improved aesthetics.
- Updated adaptive icon path in app.json to reflect new asset structure.
- Added versionCode and INTERNET permission to Android configuration.
- Removed unused splash.png asset to streamline asset management.
- Updated icon and favicon assets to enhance visual quality.

--- a/app/app.json
+++ b/app/app.json
@@ -9,9 +9,8 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#1F2937",
+      "resizeMode": "contain"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -21,8 +20,10 @@
     ],
     "android": {
       "package": "com.ppdevelop.musictimer",
+      "versionCode": 1,
+      "permissions": ["INTERNET"],
       "adaptiveIcon": {
-        "foregroundImage": "./assets/icon.png",
+        "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       }
     },
