feat: enhance environment configuration for development and production
- Added ENVIRONMENT variable to distinguish between development and production modes.
- Updated .env and .env.example files to include separate API and BASE URLs for web and native platforms.
- Refactored index.ts to dynamically select API_URL and BASE_URL based on the platform and environment, improving flexibility and error handling.

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,7 +1,9 @@
 # ローカル環境での動作確認用設定ファイル
 
-# API エンドポイント URL
-# API_URL=http://192.168.0.22:8080
+# Web用URL
+API_URL=http://localhost:8080
+BASE_URL=http://localhost:19006
 
-# ベース URL（フロントエンド用）
-# BASE_URL=http://192.168.0.22:8083
+# Native用URL
+NATIVE_API_URL=http://192.168.0.22:8080
+NATIVE_BASE_URL=http://192.168.0.22:8083
