--- a/.env
+++ b/.env
@@ -1,6 +1,15 @@
+ENVIRONMENT=development
+
 REACT_NATIVE_PACKAGER_HOSTNAME=192.168.0.5
 EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
+
+# Web用URL
 API_URL=http://localhost:8080
 BASE_URL=http://localhost:19006
+
+# Native用URL
+NATIVE_API_URL=http://192.168.0.22:8080
+NATIVE_BASE_URL=http://192.168.0.22:8083
+
 RCT_METRO_PORT=19006
 GOOGLE_ANALYTICS_TRACKING_ID=
