feat: enhance app configuration with native API URLs
- Added NATIVE_API_URL and NATIVE_BASE_URL to app.json for improved environment configuration.
- Updated eas.json to include ENVIRONMENT variable for development, preview, and production builds, ensuring consistent environment management.

--- a/app/app.json
+++ b/app/app.json
@@ -39,6 +39,8 @@
     "extra": {
       "API_URL": "https://api.music-timer.dpdns.org",
       "BASE_URL": "https://music-timer.dpdns.org",
+      "NATIVE_API_URL": "https://api.music-timer.dpdns.org",
+      "NATIVE_BASE_URL": "https://music-timer.dpdns.org",
       "router": {
         "origin": false
       },
