--- a/app/eas.json
+++ b/app/eas.json
@@ -6,17 +6,26 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "ENVIRONMENT": "production"
+      }
     },
     "preview": {
       "distribution": "internal",
       "android": {
         "buildType": "apk"
       },
-      "credentialsSource": "remote"
+      "credentialsSource": "remote",
+      "env": {
+        "ENVIRONMENT": "production"
+      }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "ENVIRONMENT": "production"
+      }
     }
   },
   "submit": {
