chore: update favicon in app configuration
- Replaced favicon path in app.json from assets/favicon.png to assets/icon.png for consistency with new asset structure.

--- a/app/app.json
+++ b/app/app.json
@@ -29,8 +29,7 @@
     },
     "web": {
       "output": "single",
-      "favicon": "./assets/favicon.png",
-      "bundler": "metro"
+      "favicon": "./assets/icon.png"
     },
     "plugins": [
       "expo-router",
