--- a/app/package.json
+++ b/app/package.json
@@ -8,40 +8,33 @@
     "ios": "npx expo run:ios"
   },
   "dependencies": {
-    "@expo/metro-runtime": "3.2.3",
-    "@hookform/resolvers": "3.9.0",
-    "@react-native-async-storage/async-storage": "2.0.0",
-    "@rneui/base": "4.0.0-rc.7",
-    "@rneui/themed": "4.0.0-rc.8",
+    "@expo/metro-runtime": "~6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "axios": "1.13.2",
     "axios-retry": "4.5.0",
-    "expo": "51.0.31",
-    "expo-constants": "16.0.2",
-    "expo-linear-gradient": "14.0.2",
-    "expo-linking": "6.3.1",
-    "expo-localization": "15.0.3",
-    "expo-router": "3.5.23",
-    "expo-secure-store": "~13.0.2",
-    "expo-status-bar": "1.12.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "expo": "54",
+    "expo-constants": "~18.0.10",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-localization": "~17.0.7",
+    "expo-router": "6.0.15",
+    "expo-secure-store": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-ga4": "2.1.0",
     "react-hook-form": "7.53.0",
-    "react-native": "0.75.2",
-    "react-native-dotenv": "3.4.11",
-    "react-native-safe-area-context": "4.10.9",
-    "react-native-screens": "3.34.0",
-    "react-native-svg": "15.11.1",
-    "react-native-text-link": "1.0.1",
+    "react-native": "0.81.5",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-toast-message": "^2.3.3",
-    "react-native-vector-icons": "10.1.0",
-    "react-native-web": "0.19.12",
-    "react-native-webview": "13.8.6",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "yup": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
-    "@types/react": "18.3.4",
+    "@types/react": "^19.2.7",
     "npm-check-updates": "17.1.0",
     "typescript": "5.5.4"
   },
