--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
+    "@hookform/resolvers": "5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "axios": "1.13.2",
     "axios-retry": "4.5.0",
@@ -22,7 +23,7 @@
     "react": "^19.1.0",
     "react-dom": "19.1.0",
     "react-ga4": "2.1.0",
-    "react-hook-form": "7.53.0",
+    "react-hook-form": "7.66.1",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -30,7 +31,7 @@
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "yup": "1.4.0"
+    "yup": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
