chore: update React and related dependencies to latest versions
- Updated `react` and `react-dom` to version 19.2.0 in `package.json`, `package-lock.json`, and `pnpm-lock.yaml` for improved performance and compatibility.
- Adjusted `@hookform/resolvers` version to `^5.2.2` to ensure compatibility with the updated React version.
- Updated `scheduler` to version 0.27.0 to align with the latest React updates.

--- a/app/package.json
+++ b/app/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
-    "@hookform/resolvers": "5.2.2",
+    "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "axios": "1.13.2",
     "axios-retry": "4.5.0",
@@ -20,8 +20,8 @@
     "expo-router": "6.0.15",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "^19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-ga4": "2.1.0",
     "react-hook-form": "7.66.1",
     "react-native": "0.81.5",
