refactor: update environment variable naming for Expo compatibility
- Renamed environment variables in `.env` and `.env.example` to include the `EXPO_PUBLIC_` prefix for better integration with Expo.
- Updated the configuration in `index.ts` to utilize the new environment variable names for API URLs, ensuring consistency across web and native platforms.

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,10 +1,10 @@
 # ローカル環境での動作確認用設定ファイル
-ENVIRONMENT=development
+EXPO_PUBLIC_ENVIRONMENT=development
 
 # Web用URL
-API_URL=http://localhost:8080
-BASE_URL=http://localhost:19006
+EXPO_PUBLIC_API_URL=http://localhost:8080
+EXPO_PUBLIC_BASE_URL=http://localhost:19006
 
 # Native用URL
-NATIVE_API_URL=http://192.168.0.22:8080
-NATIVE_BASE_URL=http://192.168.0.22:8083
+EXPO_PUBLIC_NATIVE_API_URL=http://192.168.0.22:8080
+EXPO_PUBLIC_NATIVE_BASE_URL=http://192.168.0.22:8083
