--- a/.env
+++ b/.env
@@ -4,12 +4,12 @@ REACT_NATIVE_PACKAGER_HOSTNAME=192.168.0.5
 EXPO_DEVTOOLS_LISTEN_ADDRESS=0.0.0.0
 
 # Web用URL
-API_URL=http://localhost:8080
-BASE_URL=http://localhost:19006
+EXPO_PUBLIC_API_URL=http://localhost:8080
+EXPO_PUBLIC_BASE_URL=http://localhost:19006
 
 # Native用URL
-NATIVE_API_URL=http://192.168.0.22:8080
-NATIVE_BASE_URL=http://192.168.0.22:8083
+EXPO_PUBLIC_NATIVE_API_URL=http://192.168.0.22:8080
+EXPO_PUBLIC_NATIVE_BASE_URL=http://192.168.0.22:8083
 
 RCT_METRO_PORT=19006
 GOOGLE_ANALYTICS_TRACKING_ID=
