refactor: enhance app configuration for localization and API integration
- Updated app name to "Music Timer" for improved branding.
- Added Japanese localization support with a new locales entry.
- Integrated expo-localization plugin with supported locales for Android.
- Renamed environment variables in app configuration to include the `EXPO_PUBLIC_` prefix for consistency with previous changes.

--- a/app/app.json
+++ b/app/app.json
@@ -36,10 +36,10 @@
       "expo-secure-store"
     ],
     "extra": {
-      "API_URL": "https://api.music-timer.dpdns.org",
-      "BASE_URL": "https://music-timer.dpdns.org",
-      "NATIVE_API_URL": "https://api.music-timer.dpdns.org",
-      "NATIVE_BASE_URL": "https://music-timer.dpdns.org",
+      "EXPO_PUBLIC_API_URL": "https://api.music-timer.dpdns.org",
+      "EXPO_PUBLIC_BASE_URL": "https://music-timer.dpdns.org",
+      "EXPO_PUBLIC_NATIVE_API_URL": "https://api.music-timer.dpdns.org",
+      "EXPO_PUBLIC_NATIVE_BASE_URL": "https://music-timer.dpdns.org",
       "router": {
         "origin": false
       },
