--- a/app/package.json
+++ b/app/package.json
@@ -20,8 +20,8 @@
     "expo-router": "6.0.15",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-ga4": "2.1.0",
     "react-hook-form": "7.66.1",
     "react-native": "0.81.5",
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.25.2",
-    "@types/react": "^19.2.7",
+    "@types/react": "19.1.0",
     "npm-check-updates": "17.1.0",
     "typescript": "5.5.4"
   },
