--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "axios-retry": "4.5.0",
     "expo": "54",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.18",
     "expo-linear-gradient": "~15.0.7",
     "expo-localization": "~17.0.7",
     "expo-router": "6.0.15",
