--- a/app/package.json
+++ b/app/package.json
@@ -8,33 +8,34 @@
     "ios": "npx expo run:ios"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~6.1.2",
-    "@hookform/resolvers": "^5.2.2",
+    "@expo/metro-runtime": "6.1.2",
+    "@hookform/resolvers": "5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "axios": "1.13.2",
     "axios-retry": "4.5.0",
     "expo": "54",
-    "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.18",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-localization": "~17.0.7",
+    "expo-constants": "18.0.10",
+    "expo-dev-client": "6.0.18",
+    "expo-linear-gradient": "15.0.7",
+    "expo-localization": "17.0.7",
     "expo-router": "6.0.15",
-    "expo-secure-store": "~15.0.7",
-    "expo-status-bar": "~3.0.8",
+    "expo-secure-store": "15.0.7",
+    "expo-status-bar": "3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-ga4": "2.1.0",
     "react-hook-form": "7.66.1",
     "react-native": "0.81.5",
-    "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
+    "react-native-safe-area-context": "5.6.2",
+    "react-native-screens": "4.18.0",
     "react-native-svg": "15.12.1",
-    "react-native-toast-message": "^2.3.3",
-    "react-native-web": "^0.21.0",
+    "react-native-toast-message": "2.3.3",
+    "react-native-web": "0.21.2",
     "react-native-webview": "13.15.0",
     "yup": "1.7.1"
   },
   "devDependencies": {
+    "eas-cli": "16.28.0",
     "@babel/core": "7.25.2",
     "@types/react": "19.1.0",
     "npm-check-updates": "17.1.0",
