fix: update environment variable naming in eas.json
- Changed the environment variable from "ENVIRONMENT" to "EXPO_PUBLIC_ENVIRONMENT" in the eas.json file for consistency across build configurations.

--- a/app/eas.json
+++ b/app/eas.json
@@ -11,7 +11,7 @@
         "buildType": "apk"
       },
       "env": {
-        "ENVIRONMENT": "production"
+        "EXPO_PUBLIC_ENVIRONMENT": "production"
       }
     },
     "preview": {
@@ -21,13 +21,13 @@
       },
       "credentialsSource": "remote",
       "env": {
-        "ENVIRONMENT": "production"
+        "EXPO_PUBLIC_ENVIRONMENT": "production"
       }
     },
     "production": {
       "autoIncrement": true,
       "env": {
-        "ENVIRONMENT": "production"
+        "EXPO_PUBLIC_ENVIRONMENT": "production"
       }
     }
   },
