fix: update README and configuration files for domain changes and network security
- Updated the live site URL in README.md to reflect the new domain.
- Reformatted the platforms and permissions arrays in app.json for better readability.
- Changed the environment variable for production to development in eas.json.
- Added a new plugin for network security configuration in Android to support self-signed certificates.

--- a/app/app.json
+++ b/app/app.json
@@ -5,7 +5,10 @@
     "version": "1.0.0",
     "scheme": "musictimer",
     "orientation": "portrait",
-    "platforms": ["android", "web"],
+    "platforms": [
+      "android",
+      "web"
+    ],
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
@@ -21,7 +24,9 @@
     "android": {
       "package": "com.ppdevelop.musictimer",
       "versionCode": 1,
-      "permissions": ["INTERNET"],
+      "permissions": [
+        "INTERNET"
+      ],
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
@@ -33,13 +38,14 @@
     },
     "plugins": [
       "expo-router",
-      "expo-secure-store"
+      "expo-secure-store",
+      "./plugins/withNetworkSecurityConfig"
     ],
     "extra": {
-      "EXPO_PUBLIC_API_URL": "https://api.music-timer.dpdns.org",
-      "EXPO_PUBLIC_BASE_URL": "https://music-timer.dpdns.org",
-      "EXPO_PUBLIC_NATIVE_API_URL": "https://api.music-timer.dpdns.org",
-      "EXPO_PUBLIC_NATIVE_BASE_URL": "https://music-timer.dpdns.org",
+      "EXPO_PUBLIC_API_URL": "https://api.musictimer.dpdns.org",
+      "EXPO_PUBLIC_BASE_URL": "https://musictimer.dpdns.org",
+      "EXPO_PUBLIC_NATIVE_API_URL": "https://api.musictimer.dpdns.org",
+      "EXPO_PUBLIC_NATIVE_BASE_URL": "https://musictimer.dpdns.org",
       "router": {
         "origin": false
       },
