--- a/app/eas.json
+++ b/app/eas.json
@@ -11,7 +11,7 @@
         "buildType": "apk"
       },
       "env": {
-        "EXPO_PUBLIC_ENVIRONMENT": "production"
+        "EXPO_PUBLIC_ENVIRONMENT": "development"
       }
     },
     "preview": {
